[tool.poetry]
name = "arxiv-reddit-summary"
version = "0.6.1"
description = "Summarize the top 30 most popular arXiv papers on Reddit and Hacker News in the last 30 days and post them on Slack, Twitter and Bluesky."
authors = ["Susumu OTA <1632335+susumuota@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
praw = "^7.7.1"
pandas = "^2.0.3"
arxiv = "^1.4.8"
tweepy = "^4.14.0"
python-dateutil = "^2.8.2"
imgkit = "^1.2.3"
google-cloud-storage = "^2.10.0"
deepl = "^1.15.0"
pysbd = "^0.3.4"
slack-sdk = "^3.21.3"
nanoatp = "^0.3.5"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.3"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 320

[tool.isort]
profile = "black"
