[tool.poetry]
name = "arxiv-reddit-summary"
version = "0.7.6"
description = "Summarize the top 30 most popular arXiv papers on Reddit, Hacker News and Hugging Face in the last 30 days. And post them to Slack, Twitter and Bluesky."
authors = ["Susumu OTA <1632335+susumuota@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
praw = "^7.8.1"
pandas = "^2.2.3"
arxiv = "^2.1.3"
tweepy = "^4.15.0"
python-dateutil = "^2.9.0.post0"
imgkit = "^1.2.3"
google-cloud-storage = "^3.0.0"
deepl = "^1.21.0"
pysbd = "^0.3.4"
slack-sdk = "^3.34.0"
nanoatp = "^0.5.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.0"
ipykernel = "^6.29.5"
ruff = "^0.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 320

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 320
